@@ -3,6 +3,8 @@ using FaunaDB.Types;
 using Newtonsoft.Json;
 using NUnit.Framework;
 
+using static FaunaDB.Query.Language;
+
 namespace Test
 {
     [TestFixture] public class DeserializationTest
@@ -114,6 +116,13 @@ namespace Test
             AssertJsonEqual(new BytesV(0xfd), "{\"@bytes\":\"_Q==\"}");
             AssertJsonEqual(new BytesV(0xfe), "{\"@bytes\":\"_g==\"}");
             AssertJsonEqual(new BytesV(0xff), "{\"@bytes\":\"_w==\"}");
+        }
+
+        [Test]
+        public void TestQuery()
+        {
+            AssertJsonEqual(QueryV.Of("x", Add(Var("x"), 1)), "{\"@query\":{\"lambda\":\"x\",\"expr\":{\"add\":[{\"var\":\"x\"},1]}}}");
+            AssertJsonEqual(QueryV.Of(x => Add(x, 1)), "{\"@query\":{\"lambda\":\"x\",\"expr\":{\"add\":[{\"var\":\"x\"},1]}}}");
         }
     }
 }
