@@ -1,6 +1,7 @@
 1.1.0-SNAPSHOT
 * Pinning FaunaDB API version to 2.0
 * Adds support for user classes serialization
+* Adds support for @query type
 
 1.0.0
 * Official release
